# autonomous_wheelchair

./: .gitignore  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  PROJECT_STATUS.md  QUICK_START.md  README.md
fgm_plugin/: CMakeLists.txt  fgm_plugin.xml  package.xml
fgm_plugin/scripts/: danger_factor.py  fuzzy1.py  fuzzy2.py  scaled_linear_velocity.py
fgm_plugin/src/: PID.cpp  fgm_plugin.cpp
fgm_plugin/test/: CMakeLists.txt  test_data_validation.cpp  test_data_validation.test  test_pid_controller.cpp
perception/: CMakeLists.txt  package.xml
perception/cfg/: segmenter_reconfig.cfg
perception/launch/: decimation.yaml  laser_inflater.launch  perception.launch  point_to_laser.launch  rs_camera_custom.launch  spatial.yaml
perception/src/: imu_static_transform_publisher.cpp  laser_inflater.cpp  object_segmenter.cpp  point_transform_laser.cpp
rplidar_ros/launch/: rplidar.launch  rplidar_all.launch
rplidar_ros/src/: node.cpp
rrtstar_plugin/: CMakeLists.txt  package.xml  rrtstar_plugin.xml
rrtstar_plugin/src/: rrtstar_plugin.cpp
topic_logger/: CMakeLists.txt  package.xml
topic_logger/scripts/: constant_speed.txt  fuzzy_speed.txt  logger.py
wheelchair_navigation/: CMakeLists.txt
wheelchair_navigation/config/: diagnostics.yaml  error_recovery.yaml  hardware_config.yaml  motor_params.yaml  planner_params.yaml  safety_limits.yaml  wheelchair_config.yaml
wheelchair_navigation/launch/: filter_front_rp.launch  wheelchair.launch
wheelchair_navigation/msg/: EmergencyStop.msg  manualusage.py  teleopchair.py  twist2motors.py
wheelchair_navigation/scripts/: encoder2tf.py  twist2motors_refactored.py
wheelchair_navigation/src/: ChairController.cpp  ChairNode.cpp  ChairNodeRefactored.cpp  ErrorRecovery.cpp  RoboteqDevice.cpp  (+1 more)
wheelchair_navigation/test/: CMakeLists.txt  README.md  run_all_tests.launch  test_chair_controller.cpp  test_integration.cpp  test_integration.test  test_velocity_mapping.py
(+7 files in other folders)
